# aiogram_bot_template

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 001_created_table.py
scripts/: docker-entrypoint.sh
src/bot/: __main__.py  app_config.py  runners.py  states.py  utils.py
src/bot/di/: __init__.py  bot.py  main.py  sql.py
src/bot/dialogs/: __init__.py
src/bot/dialogs/admin/: __init__.py  dialogs.py
src/bot/dialogs/commands/: __init__.py  admin.py  entrypoint.py  user.py
src/bot/dialogs/start/: dialogs.py
src/bot/errors/: on_unknown_intent.py
src/bot/factory/: container.py  dispatcher.py
src/bot/middlewares/: __init__.py
src/bot/middlewares/outer/: __init__.py  log.py
src/bot/services/database/: __init__.py
src/bot/telegram/dialogs/: __init__.py  entrypoint.py
src/bot/telegram/dialogs/start/: dialogs.py
src/database/models/: data.py  user.py
src/di/: bot.py  data.py  main.py  sql.py
src/domain/db/: _base.py  user.py
src/domain/entities/: exceptions.py
src/factory/: app_config.py  bot.py  container.py  dispatcher.py
src/middlewares/outer/: log.py  user.py
src/utils/loggers/: __init__.py
