[tool.poetry]
name = "Telegram Bot Template"
version = "0.1.0"
description = "Aiogram telegram bot template"
authors = ["nightingale <nightintgale@yandex.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
aiogram-dialog = "^2.3.1"
dishka = "^1.4.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
redis = "^5.2.1"
alembic = "^1.14.1"
msgspec = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[poetry.group.dev.dependencies]
libcst = "^1.2.0"
black = "^24.4.0"
mypy = "^1.8.0"
ruff = "^0.7.2"

[tool.black]
line-length = 99
exclude = "\\.?venv|\\.cache"

[tool.ruff]
target-version = "py38"
line-length = 99
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[tool.ruff.lint]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]


[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["src.bot.telegram.*"]
strict_optional = false
warn_return_any = false
